Fix clipped text on "Work Phone" field of master file.

--- a/src/main/frontend/src/record/details/components/contactSection/_contactSection.scss
+++ b/src/main/frontend/src/record/details/components/contactSection/_contactSection.scss
@@ -19,6 +19,10 @@
 
 				.juno-input {
 					width: 248px;
+
+					input {
+						padding: 0 8px 0 16px;
+					}
 				}
 				.phone-ext {
 					.juno-input {
